--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   mysql1: ^0.19.2
   get_it: ^7.1.3
   logger: ^1.0.0
+  injectable: ^1.4.1
 
 dev_dependencies:
   # pedantic: ^1.10.0
   strict: ^1.1.0
+  injectable_generator: ^1.4.1
+  build_runner: ^2.0.4
