--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ mysqldata/
 
 # Conventional directory for build output.
 build/
-/lib/application/config/service_locator_config.config.dart
+*.config.dart
+*.g.dart
