--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   args: ^2.0.0
   shelf: ^1.1.0
+  shelf_router: ^1.0.0
   dotenv: ^3.0.0
   mysql1: ^0.19.2
   get_it: ^7.1.3
@@ -20,3 +21,4 @@ dev_dependencies:
   strict: ^1.1.0
   injectable_generator: ^1.4.1
   build_runner: ^2.0.4
+  shelf_router_generator: ^1.0.0
