--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get_it: ^7.1.3
   logger: ^1.0.0
   injectable: ^1.4.1
+  jaguar_jwt: ^3.0.0
 
 dev_dependencies:
   # pedantic: ^1.10.0
