--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
 dev_dependencies:
   # pedantic: ^1.10.0
   strict: ^1.1.0
+  # effective_dart: ^1.3.0
   injectable_generator: ^1.4.1
   build_runner: ^2.0.4
   shelf_router_generator: ^1.0.0
