--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,21 @@ environment:
 
 dependencies:
   args: ^2.0.0
-  shelf: ^1.1.0
-  shelf_router: ^1.0.0
   dotenv: ^3.0.0
-  mysql1: ^0.19.2
   get_it: ^7.1.3
-  logger: ^1.0.0
   injectable: ^1.4.1
   jaguar_jwt: ^3.0.0
+  logger: ^1.0.0
+  mysql1: ^0.19.2
+  shelf: ^1.1.0
+  shelf_router: ^1.0.0
 
 dev_dependencies:
   # pedantic: ^1.10.0
   strict: ^1.1.0
   # effective_dart: ^1.3.0
-  injectable_generator: ^1.4.1
+  # lints: ^1.0.1
   build_runner: ^2.0.4
+  injectable_generator: ^1.4.1
+  # linter: ^1.5.0
   shelf_router_generator: ^1.0.0
