--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,5 @@
 include: package:strict/analysis_options.yaml
+# include: package:lints/recommended.yaml
 
 analyzer:
   exclude: [ lib/**.g.dart, lib/**.config.dart ]
