--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
 
 dev_dependencies:
   # pedantic: ^1.10.0
-  strict: ^1.1.0
+  strict: ^1.2.0
   # effective_dart: ^1.3.0
   # lints: ^1.0.1
   build_runner: ^2.0.4
@@ -29,3 +29,4 @@ dev_dependencies:
   shelf_router_generator: ^1.0.0
   test: ^1.17.12
   mocktail: ^0.1.4
+  # lints: ^1.0.1
